--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: 'Playfair Display', serif;
-	background-image: url("train.jpg");
+	background-image: url("assets/images/bild.jpg");
 }
 
 .jumbotron {
